# arcpanel

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
panel/agent/: Cargo.toml  arc-agent.service
panel/agent/src/: main.rs  safe_cmd.rs  tls.rs
panel/agent/src/routes/: backup_verify.rs  backups.rs  cms.rs  crons.rs  database.rs  database_backup.rs  deploy.rs  diagnostics.rs  docker_apps.rs  files.rs  git_build.rs  health.rs  iac.rs  image_scan.rs  logs.rs  mail.rs  migration.rs  mod.rs  nginx.rs  php.rs  remote_backup.rs  sbom.rs  security.rs  server_utils.rs  service_installer.rs  services.rs  smtp.rs  ssl.rs  staging.rs  system.rs  telemetry.rs  terminal.rs  traefik.rs  updates.rs  volume_backup.rs  wordpress.rs
panel/agent/src/services/: app_process.rs  backup_verify.rs  backups.rs  cms.rs  command_filter.rs  compose.rs  database.rs  database_backup.rs  deploy.rs  diagnostics.rs  docker_apps.rs  encryption.rs  files.rs  git_build.rs  image_scanner.rs  logs.rs  migration.rs  mod.rs  nginx.rs  phone_home.rs  php.rs  remote_backup.rs  sbom_scanner.rs  security.rs  security_scanner.rs  smtp.rs  ssl.rs  staging.rs  traefik.rs  volume_backup.rs  wordpress.rs  wp_vulnerability.rs
panel/backend/: Cargo.toml  Dockerfile
panel/backend/migrations/: 20260311000000_initial.sql  20260311100000_add_ssl_expiry.sql  20260311200000_add_backups.sql  20260311230000_settings_and_activity.sql  20260312000000_data_integrity.sql  20260312100000_performance_indexes.sql  20260312200000_add_crons.sql  20260312300000_backup_destinations_schedules.sql  20260312400000_deploy_configs.sql  20260312500000_site_resource_limits.sql  20260312600000_dns_zones.sql  20260312600001_dns_zones_email.sql  20260312700000_staging_sites.sql  20260312800000_saas_auth.sql  20260312900000_server_live_metrics.sql  20260312950000_stripe_billing.sql  20260312960000_agent_commands.sql  20260312970000_uptime_monitoring.sql  20260312980000_teams.sql  20260312990000_performance_metrics.sql  20260312991000_security_scans.sql  20260313000000_alerting_system.sql  20260313100000_remove_billing_enforcement.sql  20260314000000_two_factor_auth.sql  20260314000001_auto_heal_setting.sql  20260314000002_custom_nginx.sql  20260314100000_retention_policies.sql  20260314200000_data_integrity_v2.sql  20260314300000_php_preset.sql  20260315000000_powerdns_support.sql  20260315100000_metrics_history.sql  20260315200000_mail_management.sql  20260316200000_metrics_history_server_id.sql  20260316210000_system_logs.sql  20260318000000_docker_stacks.sql  20260318100000_app_runtime.sql  20260318200000_git_deploys.sql  20260318300000_git_deploys_batch2.sql  20260318400000_git_deploys_batch3.sql  20260318500000_git_deploys_batch4.sql  (+49 more)
panel/backend/src/: auth.rs  config.rs  error.rs  helpers.rs  main.rs  models.rs  safe_cmd.rs
panel/backend/src/routes/: activity.rs  agent_checkin.rs  agent_commands.rs  agent_updates.rs  alerts.rs  api_keys.rs  auth.rs  backup_destinations.rs  backup_orchestrator.rs  backup_schedules.rs  backups.rs  billing.rs  cdn.rs  crons.rs  dashboard.rs  databases.rs  deploy.rs  dns.rs  docker_apps.rs  extensions.rs  files.rs  git_deploys.rs  iac.rs  image_scans.rs  incidents.rs  logs.rs  mail.rs  metrics.rs  migration.rs  mod.rs  monitors.rs  notifications.rs  oauth.rs  passkeys.rs  php.rs  prometheus.rs  reseller_dashboard.rs  resellers.rs  sboms.rs  secrets.rs  (+19 more)
panel/backend/src/services/: activity.rs  agent.rs  alert_engine.rs  auto_healer.rs  backup_policy_executor.rs  backup_scheduler.rs  backup_verifier.rs  deploy_scheduler.rs  email.rs  extensions.rs  image_scanner.rs  metrics_collector.rs  mod.rs  notifications.rs  (+9 more)
panel/cli/: Cargo.toml
panel/cli/src/: client.rs  main.rs
(+190 files in other folders)
