[package]
name = "arcpanel-api"
version = "2.7.20"
edition = "2024"

[[bin]]
name = "arc-api"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros", "derive"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "tokio1", "hostname"] }
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
subtle = "2"
rustls = "0.23"
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
# WebAuthn / Passkey support
ciborium = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
url = "2"
serde_yaml_ng = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
